Service Regression/tests/00DM0000001eO1fMAE/objects/Knowledge_Base__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>Summary</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>BU - ATG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU - ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU - Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Info - ATG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Info - ATG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Issues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_2__c</fullName>
        <label>URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Name_3__c</fullName>
        <label>URL Name 3</label>
        <type>Url</type>
    </fields>
    <label>Knowledge Base</label>
    <pluralLabel>Knowledge Base</pluralLabel>
</CustomObject>